force-app/main/default/objects/TW1_Quality_Inspection_Receipt_Item__c/TW1_Quality_Inspection_Receipt_Item__c.object-meta.xml
<CustomObject>
    <label>Quality Receipt Inspection Item</label>
    <nameField>
        <displayFormat>Item-{000000}</displayFormat>
        <label>Quality Receipt Inspection Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Receipt Inspection Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>