force-app/main/default/objects/TW1_Quality_Inspection_Receipt_Item__c/fields/StatusEtiquetaFormula__c.field-meta.xml
<CustomField>
    <fullName>StatusEtiquetaFormula__c</fullName>
    <formula>IF(ISPICKVAL(TW5_Supply_Chain_Status__c,&apos;&apos;), TEXT(TW1_Status__c),TEXT(TW5_Supply_Chain_Status__c))</formula>
    <label>StatusEtiquetaFormula</label>
    <type>Text</type>
</CustomField>