force-app/main/default/objects/TW1_Quality_Inspection_Receipt_Item__c/fields/TW1_Quality_Inspection_Receipt__c.field-meta.xml
<CustomField>
    <fullName>TW1_Quality_Inspection_Receipt__c</fullName>
    <label>Quality Receipt Inspection</label>
    <referenceTo>TW1_Interaction__c</referenceTo>
    <relationshipName>Quality_Inspection_Receipt_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>