force-app/main/default/objects/TW1_Quality_Inspection_Receipt_Item__c/fields/TW1_Status__c.field-meta.xml
<CustomField>
    <fullName>TW1_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Approved under restriction</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Action Plan Reproved</fullName>
                <isActive>false</isActive>
                <label>Action Plan Reproved</label>
            </value>
            <value>
                <fullName>Approved with nonconformities</fullName>
                <isActive>false</isActive>
                <label>Approved with nonconformities</label>
            </value>
            <value>
                <fullName>Approved without nonconformities</fullName>
                <isActive>false</isActive>
                <label>Approved without nonconformities</label>
            </value>
            <value>
                <fullName>Audit Filled</fullName>
                <isActive>false</isActive>
                <label>Audit Filled</label>
            </value>
            <value>
                <fullName>Audit Process Completed Successfully</fullName>
                <isActive>false</isActive>
                <label>Audit Process Completed Successfully</label>
            </value>
            <value>
                <fullName>Awaiting Evidence</fullName>
                <isActive>false</isActive>
                <label>Awaiting Evidence</label>
            </value>
            <value>
                <fullName>Awaiting Evidence Validation</fullName>
                <isActive>false</isActive>
                <label>Awaiting Evidence Validation</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <isActive>false</isActive>
                <label>Closed</label>
            </value>
            <value>
                <fullName>Evidence Approved</fullName>
                <isActive>false</isActive>
                <label>Evidence Approved</label>
            </value>
            <value>
                <fullName>Evidence Rejected</fullName>
                <isActive>false</isActive>
                <label>Evidence Rejected</label>
            </value>
            <value>
                <fullName>Not Approved</fullName>
                <isActive>false</isActive>
                <label>Not Approved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>