force-app/main/default/objects/TW1_Quality_Inspection_Receipt_Item__c/fields/TW5_Certificate__c.field-meta.xml
<CustomField>
    <fullName>TW5_Certificate__c</fullName>
    <label>Certificate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>