force-app/main/default/objects/TW1_Quality_Inspection_Receipt_Item__c/fields/TW5_Critery_of_Approving__c.field-meta.xml
<CustomField>
    <fullName>TW5_Critery_of_Approving__c</fullName>
    <label>Critery of Approving</label>
    <length>255</length>
    <type>Text</type>
</CustomField>