force-app/main/default/objects/TW1_Quality_Inspection_Receipt_Item__c/fields/TW5_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>TW5_Dimensions__c</fullName>
    <label>Dimensions</label>
    <length>22</length>
    <type>Text</type>
</CustomField>