force-app/main/default/objects/TW1_Quality_Inspection_Receipt_Item__c/fields/TW5_Dye_Pen__c.field-meta.xml
<CustomField>
    <fullName>TW5_Dye_Pen__c</fullName>
    <label>Dye Pen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>