force-app/main/default/objects/TW1_Quality_Inspection_Receipt_Item__c/fields/TW5_Family_of_Materials__c.field-meta.xml
<CustomField>
    <fullName>TW5_Family_of_Materials__c</fullName>
    <label>Family of Materials</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pipe Fittings</fullName>
            </value>
            <value>
                <fullName>Consumables</fullName>
            </value>
            <value>
                <fullName>Security Devices</fullName>
            </value>
            <value>
                <fullName>Fastening Elements</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>PPE</fullName>
            </value>
            <value>
                <fullName>Static Equipment</fullName>
            </value>
            <value>
                <fullName>Structural</fullName>
            </value>
            <value>
                <fullName>Tools</fullName>
            </value>
            <value>
                <fullName>Instrumentation</fullName>
            </value>
            <value>
                <fullName>Liftings</fullName>
            </value>
            <value>
                <fullName>Hydraulic Hoses</fullName>
            </value>
            <value>
                <fullName>Marine</fullName>
            </value>
            <value>
                <fullName>Piping</fullName>
            </value>
            <value>
                <fullName>Rotating Equipment</fullName>
            </value>
            <value>
                <fullName>Valves</fullName>
            </value>
            <value>
                <fullName>Seal</fullName>
            </value>
            <value>
                <fullName>Fire Equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>