force-app/main/default/objects/TW1_Quality_Inspection_Receipt_Item__c/fields/TW5_Inspection_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>TW5_Inspection_Recommendation__c</fullName>
    <label>Inspection Recommendation</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>