force-app/main/default/objects/TW1_Quality_Inspection_Receipt_Item__c/fields/TW5_Item_PO__c.field-meta.xml
<CustomField>
    <fullName>TW5_Item_PO__c</fullName>
    <label>Item PO</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>