force-app/main/default/objects/TW1_Quality_Inspection_Receipt_Item__c/fields/TW5_Item_Value_X_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TW5_Item_Value_X_Quantity__c</fullName>
    <label>Item Value X Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>