force-app/main/default/objects/TW1_Quality_Inspection_Receipt_Item__c/fields/TW5_Main_Deviation__c.field-meta.xml
<CustomField>
    <fullName>TW5_Main_Deviation__c</fullName>
    <label>Main Deviation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Logistic</fullName>
            </value>
            <value>
                <fullName>Quantitative</fullName>
            </value>
            <value>
                <fullName>Defect/Damage</fullName>
            </value>
            <value>
                <fullName>Out of Specification</fullName>
            </value>
            <value>
                <fullName>PO Date (divergent from the purchase order)</fullName>
            </value>
            <value>
                <fullName>Preservation</fullName>
            </value>
            <value>
                <fullName>Traceability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>