force-app/main/default/objects/TW1_Quality_Inspection_Receipt_Item__c/fields/TW5_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>TW5_Manufacturer__c</fullName>
    <label>Manufacturer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>