force-app/main/default/objects/TW1_Quality_Inspection_Receipt_Item__c/fields/TW5_Material_Spec__c.field-meta.xml
<CustomField>
    <fullName>TW5_Material_Spec__c</fullName>
    <label>Material Spec.</label>
    <type>TextArea</type>
</CustomField>