force-app/main/default/objects/TW1_Quality_Inspection_Receipt_Item__c/fields/TW5_NQA__c.field-meta.xml
<CustomField>
    <fullName>TW5_NQA__c</fullName>
    <defaultValue>&quot;2,5&quot;</defaultValue>
    <label>NQA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>