force-app/main/default/objects/TW1_Quality_Inspection_Receipt_Item__c/fields/TW5_Other_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>TW5_Other_Rejection_Reason__c</fullName>
    <label>Other Rejection Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TW5_Receipt_Inspection_Rejection_Reason</valueSetName>
    </valueSet>
</CustomField>