force-app/main/default/objects/TW1_Quality_Inspection_Receipt_Item__c/fields/TW5_Other_Techniques__c.field-meta.xml
<CustomField>
    <fullName>TW5_Other_Techniques__c</fullName>
    <label>Other Techniques</label>
    <length>255</length>
    <type>Text</type>
</CustomField>