force-app/main/default/objects/TW1_Quality_Inspection_Receipt_Item__c/fields/TW5_PMI__c.field-meta.xml
<CustomField>
    <fullName>TW5_PMI__c</fullName>
    <label>PMI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>