force-app/main/default/objects/TW1_Quality_Inspection_Receipt_Item__c/fields/TW5_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TW5_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>