force-app/main/default/objects/TW1_Quality_Inspection_Receipt_Item__c/fields/TW5_Reference_Norm__c.field-meta.xml
<CustomField>
    <fullName>TW5_Reference_Norm__c</fullName>
    <label>Reference Norm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>