force-app/main/default/objects/TW1_Quality_Inspection_Receipt_Item__c/fields/TW5_Rejection_Limit__c.field-meta.xml
<CustomField>
    <fullName>TW5_Rejection_Limit__c</fullName>
    <formula>IF(
    (TW5_Quantity__c &lt;= 50), 1,
				IF(
								(TW5_Quantity__c &lt;= 150), 2,
								IF(
												(TW5_Quantity__c &lt;= 280), 3,
												IF(
																(TW5_Quantity__c &lt;= 500), 4,
																IF(
																				(TW5_Quantity__c &lt;= 1200), 6,
																				IF(
																								(TW5_Quantity__c &lt;= 3200), 8,
																								IF(
																												(TW5_Quantity__c &lt;= 10000), 11,
																												IF(
																																(TW5_Quantity__c &lt;= 35000), 15,
																																22
																															)
																												)
																								)
																				)
																)
												)
								)
				)</formula>
    <label>Rejection Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>