force-app/main/default/objects/TW1_Quality_Inspection_Receipt_Item__c/fields/TW5_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>TW5_Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TW1_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>TW5_Receipt_Inspection_Rejection_Reason</valueSetName>
    </valueSet>
</CustomField>