force-app/main/default/objects/TW1_Quality_Inspection_Receipt_Item__c/fields/TW5_Rejection_Restriction_Reason__c.field-meta.xml
<CustomField>
    <fullName>TW5_Rejection_Restriction_Reason__c</fullName>
    <label>Rejection/Restriction Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Manufacturing Defect</fullName>
            </value>
            <value>
                <fullName>Out of Specification</fullName>
            </value>
            <value>
                <fullName>PO Divergence</fullName>
            </value>
            <value>
                <fullName>Abserve of PO</fullName>
            </value>
            <value>
                <fullName>ITEM NO PRESENTATION</fullName>
            </value>
            <value>
                <fullName>Final Delivery</fullName>
            </value>
            <value>
                <fullName>Lack of Preservation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>