force-app/main/default/objects/TW1_Quality_Inspection_Receipt_Item__c/fields/TW5_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>TW5_Serial_Number__c</fullName>
    <label>Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>