force-app/main/default/objects/TW1_Quality_Inspection_Receipt_Item__c/fields/TW5_Supply_Chain_Approver__c.field-meta.xml
<CustomField>
    <fullName>TW5_Supply_Chain_Approver__c</fullName>
    <label>Supply Chain - Approver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>