force-app/main/default/objects/TW1_Quality_Inspection_Receipt_Item__c/fields/TW5_Supply_Chain_Status__c.field-meta.xml
<CustomField>
    <fullName>TW5_Supply_Chain_Status__c</fullName>
    <label>Supply Chain - Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved by OM Representative</fullName>
            </value>
            <value>
                <fullName>Reproved</fullName>
            </value>
            <value>
                <fullName>Approved by OM</fullName>
                <isActive>false</isActive>
                <label>Approved by OM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>