force-app/main/default/objects/TW1_Quality_Inspection_Receipt_Item__c/fields/TW5_Unit_Value__c.field-meta.xml
<CustomField>
    <fullName>TW5_Unit_Value__c</fullName>
    <label>Unit Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>