force-app/main/default/objects/TW1_Quality_Inspection_Receipt_Item__c/fields/TW5_Volume__c.field-meta.xml
<CustomField>
    <fullName>TW5_Volume__c</fullName>
    <label>Volume</label>
    <length>22</length>
    <type>Text</type>
</CustomField>