force-app/main/default/objects/TW1_Quality_Inspection_Receipt_Item__c/validationRules/CantChangeItemAfterSendInspection.validationRule-meta.xml
<ValidationRule>
    <fullName>CantChangeItemAfterSendInspection</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
				NOT(ISNEW()),
	 		ISPICKVAL(TW1_Quality_Inspection_Receipt__r.TW5_Quality_Receipt_Status__c, &quot;Submitted&quot;),
				NOT(ISCHANGED(TW5_Critery_of_Approving__c)),
				NOT(ISCHANGED(TW5_Reference_Norm__c)),
				NOT(ISCHANGED(TW5_Inspection_Description__c )),
 			NOT(ISCHANGED(TW5_Inspection_Recommendation__c)), 
				NOT(ISCHANGED(TW1_Status__c)),
				NOT(ISCHANGED(TW5_Other_Rejection_Reason__c)),
				NOT(ISCHANGED(TW5_Visual__c)),
				NOT(ISCHANGED(TW5_Dimensional__c)),
				NOT(ISCHANGED(TW5_Dye_Pen__c)),
				NOT(ISCHANGED(TW5_MPI__c)),
				NOT(ISCHANGED(TW5_UTM__c)),
				NOT(ISCHANGED(TW5_PMI__c)),
				NOT(ISCHANGED(TW5_Other_Techniques__c)),
 			NOT(ISCHANGED(TW5_Rejection_Reason__c ))
				)</errorConditionFormula>
    <errorMessage>You can&apos;t change an Item when your Inspection has already been submitted.</errorMessage>
</ValidationRule>