force-app/main/default/objects/TW1_Quality_Inspection_Receipt_Item__c/validationRules/CantChangeStatusWhenInspIsClosed.validationRule-meta.xml
<ValidationRule>
    <fullName>CantChangeStatusWhenInspIsClosed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				OR(
 			    ISPICKVAL(TW1_Quality_Inspection_Receipt__r.TW5_Quality_Receipt_Status__c , &quot;Approved&quot;),
								ISPICKVAL(TW1_Quality_Inspection_Receipt__r.TW5_Quality_Receipt_Status__c , &quot;Approved Under Restriction&quot;),
								ISPICKVAL(TW1_Quality_Inspection_Receipt__r.TW5_Quality_Receipt_Status__c , &quot;Rejected&quot;)
								),
    ISCHANGED(TW1_Status__c)
				)</errorConditionFormula>
    <errorMessage>You can&apos;t change an Item when the Inspection is already closed.</errorMessage>
</ValidationRule>