force-app/main/default/objects/TW1_Quality_Inspection_Receipt_Item__c/validationRules/CantGiveResultUntilStatusDifNotSubmitted.validationRule-meta.xml
<ValidationRule>
    <fullName>CantGiveResultUntilStatusDifNotSubmitted</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				ISCHANGED( TW1_Status__c ),
				ISPICKVAL(TW1_Quality_Inspection_Receipt__r.TW5_Quality_Receipt_Status__c, &quot;Not Submitted&quot;)
				)</errorConditionFormula>
    <errorMessage>You can&apos;t give a result to an Item while your Inspection has not yet been submitted.</errorMessage>
</ValidationRule>