force-app/main/default/objects/TW1_Quality_Inspection_Receipt_Item__c/validationRules/StatusRejectedFieldsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>StatusRejectedFieldsRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				ISPICKVAL(TW1_Status__c, &quot;Rejected&quot;),
    OR(
								ISBLANK(TW5_Inspection_Description__c),
								ISBLANK(TW5_Inspection_Recommendation__c)
								)
				)</errorConditionFormula>
    <errorMessage>If the Item is Rejected, you have to fill &quot;Inspection Description&quot; and &quot;Inspection Recommendation&quot; fields.</errorMessage>
</ValidationRule>